# ros2_composition_pkgs

./: README.md
rom_robot/: CMakeLists.txt  package.xml
rom_robot/src/: publisher_component.cpp  talker.cpp
